@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<map version="0.99a" orientation="orthogonal" width="32" height="32" tilewidth="32" tileheight="32">
+ <tileset name="Desert" firstgid="1" tilewidth="32" tileheight="32" spacing="1">
+  <image source="tmw_desert_spacing.png"/>
+ </tileset>
+ <layer name="Layer 0" width="32" height="32">
+  <data encoding="base64" compression="gzip">
+   H4sIAAAAAAAAAO3ToQ6AMAxF0Y6pgWLIJRhQkPD/n0eRkIqF0AVxxRHP9KquIrJV2tX8sevm4XD3raA6Q3TqlcdOqjcMTv2F/m2PKhumRv3WPH4aAAAAwD+d2Z6DGgAQAAA=
+  </data>
+ </layer>
+</map>
